src/objects/RAD_Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>RAD_Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAD_Error_Source__c</fullName>
        <label>Error Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RAD_Exception_Object_Name__c</fullName>
        <label>Exception Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RAD_Exception_Record_ID__c</fullName>
        <label>Exception Record ID</label>
        <type>TextArea</type>
    </fields>
    <label>Exception Log</label>
    <nameField>
        <label>Exception Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>